# idrac-fan-controller-rust

./: .gitignore  AGENTS.md  BETA_BUILD_FIXES.md  CLAUDE.md  COMPARISON.md  Cargo.toml  Dockerfile  FILES_GUIDE.md  PROJECT_SUMMARY.md  README.md  README_REPO.md  SMOOTHING_CHANGES.md  UNRAID_SETUP.md  build-and-push-beta.sh  build-local.sh  docker-compose.yml  test-local.sh
.github/: CODEOWNERS  TRIGGER_BUILD.md  import-ruleset.sh
.github/workflows/: docker-beta.yml  docker-build-push.yml  docker-main.yml
_docs/: DOCKER_HUB_PUBLISH.md  DOCKER_IMAGES.md  GETTING_STARTED.md  MANUAL_WORKFLOW.md  QUICKSTART.md  README.md  RULESET_README.md  SAFE_TESTING.md  START_HERE.md  branch-protection-ruleset.json
_memory_bank/: memory-bank-instructions.md
_memory_bank/long-term-memory/: productContext.md  systemPatterns.md  techContext.md
_memory_bank/short-term-memory/: activeContext.md  progress.md  projectBrief.md
examples/: curve_demo.rs
src/: config.rs  fan_curve.rs  ipmi.rs  main.rs
unraid/: README.md  idrac-fan-controller-rust.xml
