[package]
name = "idrac_fan_controller"
version = "1.0.0"
edition = "2021"
authors = ["Rust Rewrite"]
description = "Dell iDRAC fan controller with exponential curve - Rust implementation"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
